<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="movie"
                  type="com.smupparaju.moviexplore.model.Movie"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/wrapper_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/medium_margin"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_margin">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/media_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimaryDark"
                        android:padding="@dimen/medium_margin"
                        android:text="@{movie.title}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/media_image"
                        android:layout_width="160dp"
                        android:layout_height="235dp"
                        android:layout_marginStart="@dimen/medium_margin"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:src="@drawable/default_poster"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/media_title"
                        app:srcCompat="@drawable/default_poster" />

                    <TextView
                        android:id="@+id/label_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/little_margin"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:text="@string/label_release_date"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/media_image"
                        app:layout_constraintTop_toBottomOf="@+id/media_title" />

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/little_margin"
                        android:layout_marginEnd="@dimen/little_margin"
                        android:text="@{movie.releaseDate}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/text_color"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/label_release_date"
                        app:layout_constraintTop_toTopOf="@+id/label_release_date" />

                    <TextView
                        android:id="@+id/label_tmdb_rated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/little_margin"
                        android:layout_marginTop="@dimen/large_margin"
                        android:text="@string/label_tmdb_rated"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/media_image"
                        app:layout_constraintTop_toBottomOf="@+id/label_release_date" />

                    <TextView
                        android:id="@+id/tmdb_rated"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/little_margin"
                        android:text="@{`` + movie.voteAverage}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/text_color"
                        app:layout_constraintStart_toEndOf="@+id/label_tmdb_rated"
                        app:layout_constraintTop_toTopOf="@+id/label_tmdb_rated" />

                    <TextView
                        android:id="@+id/suffix_rated"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/suffix_rated"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/text_color"
                        app:layout_constraintStart_toEndOf="@+id/tmdb_rated"
                        app:layout_constraintTop_toTopOf="@+id/tmdb_rated" />

                    <ImageView
                        android:id="@+id/ic_rated"
                        android:layout_width="0dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="@dimen/micro_margin"
                        android:src="@drawable/ic_action_star"
                        app:layout_constraintBottom_toBottomOf="@+id/suffix_rated"
                        app:layout_constraintStart_toEndOf="@+id/suffix_rated"
                        app:srcCompat="@drawable/ic_action_star" />

                    <TextView
                        android:id="@+id/label_totalvotes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/little_margin"
                        android:layout_marginTop="@dimen/large_margin"
                        android:text="@string/label_votecount"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/media_image"
                        app:layout_constraintTop_toBottomOf="@+id/label_tmdb_rated" />

                    <TextView
                        android:id="@+id/totalvotes"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/little_margin"
                        android:layout_marginEnd="@dimen/little_margin"
                        android:text="@{`` + movie.voteCount}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/text_color"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/label_totalvotes"
                        app:layout_constraintTop_toTopOf="@+id/label_totalvotes" />

                    <TextView
                        android:id="@+id/label_popularity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/little_margin"
                        android:layout_marginTop="@dimen/large_margin"
                        android:text="@string/label_popularity"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/media_image"
                        app:layout_constraintTop_toBottomOf="@+id/label_totalvotes" />

                    <TextView
                        android:id="@+id/production"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/little_margin"
                        android:layout_marginEnd="@dimen/little_margin"
                        android:text="@{`` + movie.popularity}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/text_color"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/label_popularity"
                        app:layout_constraintTop_toTopOf="@+id/label_popularity" />

                    <TextView
                        android:id="@+id/label_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/little_margin"
                        android:layout_marginTop="@dimen/large_margin"
                        android:text="@string/label_language"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/media_image"
                        app:layout_constraintTop_toBottomOf="@+id/label_popularity" />

                    <TextView
                        android:id="@+id/type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/little_margin"
                        android:layout_marginEnd="@dimen/little_margin"
                        android:text="@{movie.originalLanguage}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/text_color"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/label_language"
                        app:layout_constraintTop_toTopOf="@+id/label_language" />

                    <TextView
                        android:id="@+id/label_synopsis"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/medium_margin"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_marginEnd="@dimen/medium_margin"
                        android:text="@string/label_synopsis"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        android:textSize="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/media_image" />

                    <TextView
                        android:id="@+id/synopsis"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/medium_margin"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_marginEnd="@dimen/medium_margin"
                        android:text="@{movie.overview}"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/text_color"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/label_synopsis" />

                    <android.support.design.widget.FloatingActionButton
                        android:id="@+id/fav_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_marginEnd="323dp"
                        android:layout_marginBottom="394dp"
                        android:clickable="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/ic_favorite_border" />

                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</layout>